# custom_discord_bot

./: .env  README.md  main.py  pyproject.toml  webserver.py
cogs/: Fun.py  Mod.py  format.txt
